--- a/postgresql.conf
+++ b/postgresql.conf
@@ -418,7 +418,7 @@ log_line_prefix = '< %m >'          # special values:
 #log_temp_files = -1            # log temporary files equal or larger
                     # than the specified size in kilobytes;
                     # -1 disables, 0 logs all temp files
-log_timezone = 'US/Pacific'
+#log_timezone = 'US/Pacific'
 
 
 #------------------------------------------------------------------------------
@@ -505,7 +505,7 @@ log_timezone = 'US/Pacific'
 
 datestyle = 'iso, mdy'
 #intervalstyle = 'postgres'
-timezone = 'US/Pacific'
+#timezone = 'US/Pacific'
 #timezone_abbreviations = 'Default'     # Select the set of available time zone
                     # abbreviations.  Currently, there are
                     #   Default
